--- a/static/index.html
+++ b/static/index.html
@@ -3,70 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Polymarket Live Markets</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Polymarket Live Dashboard</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9fafb;
+      color: #111;
+    }
+    header {
+      background: #111;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 1.3rem;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 1rem 2rem;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    th, td {
+      text-align: left;
+      padding: 0.6rem;
+      border-bottom: 1px solid #eee;
+    }
+    th {
+      background: #f3f4f6;
+    }
+    tr:hover {
+      background: #f9f9f9;
+    }
+    #loading {
+      text-align: center;
+      font-size: 1.2rem;
+      padding: 2rem;
+    }
+    .prob {
+      font-weight: bold;
+    }
+  </style>
 </head>
-<body class="bg-gray-950 text-white min-h-screen flex flex-col items-center">
-  <header class="text-center py-8">
-    <h1 class="text-3xl font-bold mb-2">🔥 Polymarket Live Markets</h1>
-    <p class="text-gray-400">Top 20 active markets sorted by volume</p>
-  </header>
-
-  <main id="marketList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6 w-full max-w-6xl">
-    <!-- Cards will be injected here -->
+<body>
+  <header>📊 Polymarket Live Markets</header>
+  <main>
+    <div id="loading">Loading live market data...</div>
+    <table id="marketTable" style="display:none">
+      <thead>
+        <tr>
+          <th>Market</th>
+          <th>Category</th>
+          <th>Probability</th>
+          <th>Volume</th>
+          <th>Liquidity</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </main>
 
-  <footer class="mt-auto py-4 text-sm text-gray-500">
-    Built with ❤️ using Polymarket Gamma API
-  </footer>
-
   <script>
-    async function fetchMarkets() {
-      const list = document.getElementById("marketList");
-      list.innerHTML = `<div class='text-center col-span-full text-gray-400'>Loading markets...</div>`;
+    async function loadMarkets() {
+      const loading = document.getElementById('loading');
+      const table = document.getElementById('marketTable');
+      const tbody = table.querySelector('tbody');
 
       try {
-        const res = await fetch("/api/top20live");
+        const res = await fetch('/api/markets?limit=20');
         const data = await res.json();
+        loading.style.display = 'none';
+        table.style.display = '';
 
-        if (!Array.isArray(data) || data.length === 0) {
-          list.innerHTML = `<div class='text-center col-span-full text-red-400'>No live markets found.</div>`;
+        if (!data.success) {
+          loading.textContent = 'Failed to load data: ' + data.error;
           return;
         }
 
-        list.innerHTML = "";
-        data.forEach(m => {
-          const outcomes = JSON.parse(m.outcomes || "[]");
-          const prices = JSON.parse(m.outcomePrices || "[]");
-          const vol = m.volume_num?.toLocaleString(undefined, { maximumFractionDigits: 2 });
-
-          const card = document.createElement("div");
-          card.className =
-            "bg-gray-900 border border-gray-700 rounded-2xl shadow-lg p-4 flex flex-col hover:shadow-xl transition-all duration-300";
-
-          card.innerHTML = `
-            <img src="${m.image || 'https://polymarket.com/favicon.ico'}" alt="Market Image"
-                 class="w-full h-40 object-cover rounded-xl mb-4 border border-gray-800">
-            <h2 class="text-lg font-semibold mb-2">${m.question}</h2>
-            <p class="text-sm text-gray-400 mb-2">${m.category || 'General'}</p>
-            <p class="text-sm text-gray-300 mb-2">Volume: <span class="text-green-400 font-medium">$${vol}</span></p>
-            <div class="flex flex-wrap gap-2 mt-auto">
-              ${outcomes.map((o, i) => `
-                <span class="text-xs bg-gray-800 px-3 py-1 rounded-full">
-                  ${o}: ${prices[i] || "?"}
-                </span>`).join("")}
-            </div>
+        data.markets.forEach(m => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td>${m.question || 'N/A'}</td>
+            <td>${m.category || '-'}</td>
+            <td class="prob">${(m.probability * 100).toFixed(1)}%</td>
+            <td>${m.volume.toFixed(2)}</td>
+            <td>${m.liquidity.toFixed(2)}</td>
           `;
-
-          list.appendChild(card);
+          tbody.appendChild(tr);
         });
-      } catch (e) {
-        console.error(e);
-        list.innerHTML = `<div class='text-center col-span-full text-red-400'>Error fetching markets.</div>`;
+      } catch (err) {
+        console.error(err);
+        loading.textContent = 'Error fetching data.';
       }
     }
 
-    fetchMarkets();
+    loadMarkets();
   </script>
 </body>
 </html>
